# mendo

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: main.rs  util.rs
src/anilist/: mod.rs  model.rs  oauth.rs  query.rs  request.rs
src/graphql/: get_progress.gql  query_user.gql  update_media.gql
