[package]
name = "mendo"
version = "0.1.0"
authors = ["Rudo2204 <rudo2204@gmail.com>"]
edition = "2018"
description = "A CLI program to update manga progress"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = "3"
regex = "1"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
open = "1"
url = "2"
anyhow = "1"
directories = "3"
confy = { git = "https://github.com/rust-cli/confy", default-features = false, features = ["yaml_conf"] }
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
clap = "2.33"
chrono = "0.4"
yaml-rust = "0.4.4"
serde_yaml = "0.8.13"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
